<resources>
    <string name="app_name">Iris</string>
    <string name="lets_help">Let Us Help You</string>
    <string name="skip">Skip</string>
    <string name="welcome_iris">Welcome to iris!</string>
    <string name="welcome_1">Hi,we\'re glad you\'re here</string>
    <string name="title_txt">Title</string>
    <string name="title_1">Communicate</string>
    <string name="title_2">Mediate</string>
    <string name="title_3">Translate</string>
    <string name="sub_title_1">ISL/ASL,speech text and\ntext to speech converters to\nchoose from</string>
    <string name="sub_title_2">guide meditation,visual\nand auditory aids to help\n with anxiety</string>
    <string name="sub_title_3">multi-language support for\ntranslating from English to\nHindi and vise versa</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have an account? Log in</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_account">Create your account</string>
    <string name="log_in">Log In</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="forgot_pass2">Forgot Password</string>
    <string name="continue_with_google">Continue with google</string>
    <string name="or_login_with_email">Or login with email</string>
    <string name="or_sign_up_with_email">Or sign up with email</string>
    <string name="privacy_policy">i have read the Privacy Policy</string>
    <string name="get_started">Get Started</string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="create_new_account">Create a new account? Sign up</string>
    <string name="enter_email">Enter email address:</string>
    <string name="verification">Verification</string>
    <string name="enter_otp">Enter Otp:</string>
    <string name="no_data_found">No data found.</string>
    <string name="try_now">Try now</string>
    <string name="text_to_speech">Text to Speech</string>
    <string name="speech_to_sign">Speech to Sign Language</string>
    <string name="sign_to_text">Sign Language to Text</string>
    <string name="speech_to_text">Speech to Text</string>
    <string name="meditation">Meditation</string>
    <string name="sub_main_title_1">Iris will convert your written text to speech.</string>
    <string name="sub_main_title_2">Iris will convert your spoken words to the sign language of your choosing.</string>
    <string name="sub_main_title_3">Lorem ismp.</string>
    <string name="sub_main_title_4">Iris will convert your spoken words to written text.</string>
    <string name="sub_main_title_5">Lorem ispm.</string>
    <string name="how_can_we_help_you_today">How can we help you today?</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="change_profile">Change profile photo</string>
    <string name="more">More</string>
    <string name="help_support"><![CDATA[Help & Support]]></string>
    <string name="about_app">About App</string>
    <string name="enter_text_here">Enter Text Here</string>
    <string name="convert">Convert</string>
    <string name="press_mike_to_play">Press Mic to To Play</string>
    <string name="press_mike_to_start">Press mic to start</string>
    <string name="text_to_sign">Text to Sign Language</string>
    <string name="select_sign_lang_pref">Please select your Sign Language Preference</string>
    <string name="indian_sign">Indian Sign Language</string>
    <string name="iris_will_convert_your_spoken_words_to_indian_sign_language">Iris will convert your spoken words to Indian Sign Language</string>
    <string name="iris_will_convert_your_spoken_words_to_american_sign_language">Iris will convert your spoken words to American Sign Language</string>
    <string name="american_sign">American Sign Language</string>
    <string name="what_bring_you_to_meditation">What Bring you to Meditation?</string>
    <string name="choose_topic">choose a topic to focus on:</string>
    <string name="any_time_text">Any time you can choose but we recommened first thing in morming.</string>
    <string name="which_day_text">Which day would you like to meditate?</string>
    <string name="every_day_is_best_txt">Every day is best, but we recommend picking at least five.</string>
    <string name="save">Save</string>
    <string name="no_thanks">No Thanks</string>
    <string name="download">Download</string>
    <string name="permission_dialog_title">Permissions</string>
    <string name="permission_dialog_msg">Manage external storage permission required.</string>
    <string name="permission_dialog_btn">Settings</string>
</resources>