<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/iv_reading"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/user_profile" />

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/alegreyasans_bold"
            android:text="@string/what_bring_you_to_meditation"
            android:textColor="@color/colorMarun"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/tv_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/alegreyasans_regular"
            android:text="@string/any_time_text"
            android:textColor="@color/colorMarun"
            android:textSize="@dimen/_13sdp" />


        <TimePicker
            android:id="@+id/timePicker1"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_grey_2"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:timePickerMode="spinner"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/alegreyasans_bold"
            android:text="@string/which_day_text"
            android:textColor="@color/colorMarun"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/alegreyasans_regular"
            android:text="@string/every_day_is_best_txt"
            android:textColor="@color/colorMarun"
            android:textSize="@dimen/_13sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_available_date"
            android:layout_width="match_parent"
            android:paddingStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_25sdp"
            android:background="@drawable/rounded_marun_2"
            android:fontFamily="@font/alegreyasans_regular"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:textAllCaps="true"
            android:text="@string/save"
            android:textColor="@color/colorYellow"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:id="@+id/tv_no_thanks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/alegreyasans_bold"
            android:textAllCaps="true"
            android:text="@string/no_thanks"
            android:textColor="@color/colorMarun3"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>