<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGreen1"
    android:orientation="vertical"
    tools:context=".ScrollingActivity">


    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_45sdp"
        android:fontFamily="@font/alegreyasans_medium"
        android:gravity="center"
        android:text="@string/welcome_1"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_sign_up"
        android:layout_below="@+id/tv_welcome"
        android:src="@drawable/sign_up_bg" />

    <TextView
        android:id="@+id/tv_sign_up"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_above="@+id/tv_login_in_info"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/rounded_marun"
        android:fontFamily="@font/alegreyasans_regular"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:id="@+id/tv_login_in_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_70sdp"
        android:fontFamily="@font/alegreyasans_regular"
        android:gravity="center"
        android:text="@string/already_have_account"
        android:textSize="@dimen/_13sdp" />
</RelativeLayout>