<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:orientation="vertical"
    tools:context=".ScrollingActivity">


    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_45sdp"
        android:fontFamily="@font/alegreyasans_bold"
        android:gravity="center"
        android:text="@string/welcome_iris"
        android:textColor="@color/white"
        android:textSize="@dimen/_25sdp" />


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_above="@+id/tv_start"
        android:layout_below="@+id/tv_welcome"
        android:src="@drawable/welcome_bg_1" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_start"
        android:layout_below="@+id/tv_welcome"
        android:src="@drawable/welcome_bg_2screen" />

    <TextView
        android:id="@+id/tv_start"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_above="@+id/tv_skip"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/rounded_blue"
        android:fontFamily="@font/alegreyasans_regular"
        android:gravity="center"
        android:text="@string/lets_help"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:fontFamily="@font/alegreyasans_bold"
        android:gravity="center"
        android:text="@string/skip"
        android:textColor="@color/colorDarkBlue2"
        android:textSize="@dimen/_13sdp" />
</RelativeLayout>