<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:background="@color/colorLightOrange"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rl_back"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/rounded_black_border"
                android:padding="@dimen/_8sdp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back" />
            </RelativeLayout>

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:src="@drawable/user_profile" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/alegreyasans_bold"

            android:text="@string/text_to_sign"
            android:textColor="@color/colorMarun3"
            android:textSize="@dimen/_22sdp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/alegreyasans_regular"
            android:text="@string/select_sign_lang_pref"
            android:textColor="@color/colorMarun3"
            android:textSize="@dimen/_16sdp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/rounded_ligth_green"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/alegreyasans_bold"
                android:text="@string/indian_sign"
                android:textColor="@color/colorYellow"
                android:textSize="@dimen/_16sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sub_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:fontFamily="@font/alegreyasans_regular"
                android:includeFontPadding="false"
                android:lineSpacingExtra="@dimen/_3sdp"
                android:text="@string/iris_will_convert_your_spoken_words_to_indian_sign_language"
                android:textColor="@color/colorMarun"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_try_indian_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_sub_title"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/alegreyasans_medium"
                android:includeFontPadding="false"
                android:text="@string/try_now"
                android:textColor="@color/colorYellow"
                android:textSize="@dimen/_16sdp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/rounded_ligth_green"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/alegreyasans_bold"
                android:text="@string/american_sign"
                android:textColor="@color/colorYellow"
                android:textSize="@dimen/_16sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_sub_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_title_1"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:fontFamily="@font/alegreyasans_regular"
                android:includeFontPadding="false"
                android:lineSpacingExtra="@dimen/_3sdp"
                android:text="@string/iris_will_convert_your_spoken_words_to_american_sign_language"
                android:textColor="@color/colorMarun"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_try_american_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_sub_title_1"
                android:layout_marginStart="@dimen/_15sdp"
                android:fontFamily="@font/alegreyasans_medium"
                android:includeFontPadding="false"
                android:text="@string/try_now"
                android:textColor="@color/colorYellow"
                android:textSize="@dimen/_16sdp" />


        </RelativeLayout>

    </LinearLayout>
</ScrollView>